@@ -6,6 +6,7 @@
 from mint import buildtypes
 from mint import amiperms
 from mint import ec2
+from mint import mint_error
 
 from mint.rest.db import manager
 
@@ -44,7 +45,8 @@ class AWSHandler(manager.Manager):
         s3 = self._getS3Client()
         try:
             s3.deleteAMI(imageName)
-        except ec2.mint_error.EC2Exception:
+        except (ec2.mint_error.EC2Exception,
+                mint_error.AMIInstanceDoesNotExist):
             pass
 
     def notify_ProductUnhidden(self, event, projectId):
